k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: betakronan-landingpage
  name: betakronan-landingpage
  namespace: betakronan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betakronan-landingpage
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: betakronan-landingpage
    spec:
      containers:
      - name: betakronan-landingpage
        image: iteam1337/betakronan-landingpage
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2368
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
