k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betakronan-ingress
  namespace: betakronan
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: betakronan.se.
spec:
  tls:
    - hosts:
        - betakronan.se
      secretName: betakronan-prod-tls
  rules:
    - host: betakronan.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: betakronan-landingpage
                port:
                  number: 80
